# EditorAgent

./: .env.example  .gitignore  README.md  add_debug_subtitle.py  add_scenery_script.py  beginner_edit_auto.py  full_editing_demo.py  init_demo_project.py  inspect_workflows.py  package.json  pnpm-lock.yaml  pyproject.toml  setup.ps1  test.py  test_full_demo.py  test_video_gen_standalone.py  verify_core_sdk_fix.py  verify_fix.py
.agent/workflows/: download-free-assets-api.md  download-pexels-assets.md  generate-google-tts.md  publish-bilibili.md  publish-douyin.md  publish-xiaohongshu.md  publish-youtube.md
AIcut-Studio/: .gitattributes  .npmrc  .pnpmfile.cjs  README.md  package.json  pnpm-lock.yaml
docs/: BEGINNER_GUIDE.md
projects/demo/: snapshot.json
tools/: add_test_subtitle.py  create_aicut_intro.py  insert_image_at_markers.py  replace_demo.py  replace_element_with_image.py  replace_element_with_panda.py
tools/_archive/: complete_fix.py  final_reconcile.py  fix_s01.py  fix_subtitles.py  pure_file_sync_demo.py  reconcile_snapshot.py  reconcile_snapshot_v2.py  reconcile_snapshot_v3.py  test_global_view.py  test_grok_click.py  test_project_switch.py  test_recognition.py
tools/core/: ai_daemon.py  aicut_sdk.py  snapshot_history.py  sync_engine.py
tools/demos/: compose_cyber_sea.py  create_demo_timeline.py  create_xiuxian_vlog.py  demo_full_state.py  polish_demo.py  refine_demo.py
tools/generators/: flux_api.py  gen_promo_voice.py  generate_future_city_voice.py  generate_tts_previews.py  generate_voiceovers.py  generate_voiceovers_segments.py  grok_bridge.py  (+10 more)
(+181 files in other folders)
